# alert-stream-simulator

./: .gitignore  COPYRIGHT  Dockerfile  Makefile  README.rst  data_rates.txt  docker-compose.yml  setup.cfg  setup.py
.github/workflows/: ci.yml
containers/grafana/: grafana.ini
containers/influxdb/: influxdb.conf  run_influxdb.sh
containers/jmxtrans/: Dockerfile  jmxtrans.json
go/: go.mod  go.sum  main.go  tools.go
go/schema-avro/: alert.go  alert_container.go  array_dia_forced_source.go  array_dia_nondetection_limit.go  array_dia_source.go  cutout.go  cutout_container.go  dia_forced_source.go  dia_forced_source_container.go  dia_nondetection_limit.go  dia_nondetection_limit_container.go  dia_object.go  dia_object_container.go  dia_source.go  dia_source_container.go  dip__cov.go  dip__cov_container.go  g_lc_non_periodic.go  g_lc_non_periodic_container.go  g_lc_periodic.go  g_lc_periodic_container.go  gen.go  i_cov.go  i_cov_container.go  i_lc_non_periodic.go  i_lc_non_periodic_container.go  i_lc_periodic.go  i_lc_periodic_container.go  oe.go  oe__cov.go  oe__cov_container.go  oe_container.go  pm_parallax__cov.go  pm_parallax__cov_container.go  ps__cov.go  ps__cov_container.go  r_lc_non_periodic.go  r_lc_non_periodic_container.go  r_lc_periodic.go  (+52 more)
script/: build_sample_datasets.sh  clean_influxdb.sh  combine_avro.py  count_per_visit.py  filter_by_midpoint_tai.py  install-base-packages.sh  snappy_recompress.py  truncate.py
test/: __init__.py  test_create.py  test_kafka_client.py  test_license_headers.py  test_play.py  test_serialization.py  testutils.py
(+15 files in other folders)
