[metadata]
name = rubin-alert-stream-simulator
version = 0.1.0
description = Auxiliary code for simulating rthe Vera Rubin Observatory Alert Stream
url = https://github.com/lsst-dm/alert-stream-simulator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
author = Spencer Nelson
author_email = swnelson@uw.edu
license = GPLv3

[options]
packages = streamsim
package_dir =
    =python
install_requires =
    avro-python3
    confluent_kafka
    astropy
    fastavro

[options.entry_points]
console_scripts =
    rubin-alert-sim = streamsim.commands:run

[options.extras_require]
dev =
    pytest
    pytest-integration
    flake8
    pep8-naming

[options.package_data]
streamsim = data/alert_schema.avsc

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude =
        __pycache__,
        **/*/__init__.py,
        .eggs/,
        .git/,
         venv

[tool:pytest]
log_level=WARN
log_cli=true
